--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "devDependencies": {
     "@angular/cli": "6.0.8",
     "@angular/compiler-cli": "^6.0.9",
-    "typescript": "^2.7.2",
     "@angular/language-service": "^6.0.9",
     "@progress/kendo-angular-buttons": "^4.1.2",
     "@progress/kendo-angular-charts": "^3.3.0",
@@ -66,6 +65,7 @@
     "popper.js": "^1.14.3",
     "protractor": "~5.3.2",
     "ts-node": "~7.0.0",
-    "tslint": "~5.10.0"
+    "tslint": "~5.10.0",
+    "typescript": "^2.7.2"
   }
 }
